pom.xml correction for naming.

--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.versionone</groupId>
-  <artifactId>V1SDK</artifactId>
+  <artifactId>VersionOne.SDK.Java.API</artifactId>
   <version>0.0.1</version>
   <packaging>jar</packaging>
 
-  <name>V1SDK</name>
+  <name>VersionOne.SDK.Java.API</name>
   <url>http://maven.apache.org</url>
 
   <properties>
@@ -49,4 +49,8 @@
   		<version>2.6.0-RC2</version>
   	</dependency>
   </dependencies>
+  <organization>
+  	<name>Version One, Inc.</name>
+  	<url>http://www.versionone.com/</url>
+  </organization>
 </project>
