Correcting build order and configuring tests.

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,37 @@
         <url>http://buildserver1:8081/artifactory/libs-release-local</url>
     </repository>
 </distributionManagement>
+<build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.12.4</version>
+        <configuration>
+          <includes>
+            <include>*Tester.java</include>
+          </includes>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+<repositories>
+    <repository>
+        <id>BUILDSERVER1</id>
+        <name>BUILDSERVER1-releases</name>
+        <url>http://buildserver1:8081/artifactory/libs-release-local</url>
+    </repository>
+    <repository>
+        <id>java.net-Public</id>
+        <name>Maven Java Net Snapshots and Releases</name>
+        <url>https://maven.java.net/content/groups/public/</url>
+    </repository>
+    <repository>
+      <id>repository.jboss.org-public</id>
+      <name>JBoss.org Maven repository</name>
+      <url>https://repository.jboss.org/nexus/content/groups/public</url>
+    </repository>  
+</repositories>
   <ciManagement>
   	<url>http://localhost/VersionOne.SDK.Java.APIClient.Tests</url>
   </ciManagement>
