--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.12.4</version>
         <configuration>
-          <skipTests>true</skipTests>
+          <skipTests>false</skipTests>
           <includes>
             <include>**/*Tester.java</include>
           </includes>
