--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,6 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <test.websiteurl>http://localhost/VersionOne.SDK.Java.APIClient.Tests</test.websiteurl>
   </properties>
 <distributionManagement>
     <repository>
@@ -28,6 +27,9 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.12.4</version>
         <configuration>
+          <systemPropertyVariables>
+            <test.websiteurl>http://localhost/VersionOne.SDK.Java.APIClient.Tests</test.websiteurl>           
+          </systemPropertyVariables>
           <skipTests>false</skipTests>
           <includes>
             <include>**/*Tester.java</include>
