Adding integration tests for D-07479 (Java APIClient throws inconclusive exception upon adding a new asset to a context to doesn't exist).

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
           <skipTests>false</skipTests>
           <includes>
             <include>**/*Tester.java</include>
+            <include>**/IntegrationTests.java</include>
           </includes>
         </configuration>
       </plugin>
