Enabling all unit tests.  Ignoring 3 failing tests temporarily that depend on a proxy.

--- a/pom.xml
+++ b/pom.xml
@@ -58,8 +58,7 @@
           </systemPropertyVariables>
           <skipTests>false</skipTests>
           <includes>
-            <include>**/*Tester.java</include>
-            <include>**/IntegrationTests.java</include>
+            <include>**/*Test*.java</include>
           </includes>
         </configuration>
       </plugin>
