WIP - Refactoring to provide proxy support in EnvironmentContext.  Everything compiles.

--- a/src/main/resources/com/versionone/apiclient/APIConfiguration.properties
+++ b/src/main/resources/com/versionone/apiclient/APIConfiguration.properties
@@ -1,5 +1,9 @@
 V1Url=https://www14.v1host.com/v1sdktesting/
-UserName=admin
-Password=admin
+V1UserName=admin
+V1Password=admin
 MetaUrl=meta.v1/
 DataUrl=rest-1.v1/
+ConfigUrl=config.v1/
+ProxyUrl=https://myProxyServer:3128
+ProxyUserName=user1
+ProxyPassword=pw1
