Adding notes to .properties file for easier instruction and setup for new users.

--- a/src/main/resources/com/versionone/apiclient/APIConfiguration.properties
+++ b/src/main/resources/com/versionone/apiclient/APIConfiguration.properties
@@ -1,9 +1,29 @@
+
+##  Mandatory
+##  The url of your VersionOne instance.
 V1Url=https://www14.v1host.com/v1sdktesting/
+
+##  Optional (depending on use case)
+##  If you're using VersionOne authentication, enter the V1 user information here.
+##  If you want to authenticate to VersionOne impersonating the user running your program, leave these fields blank.
+##  If you want to use Windows Integrated Authentication, enter your V1UserName as username@FullyQualifiedDomainName
+##  along with the correct password for that user.
 V1UserName=admin
 V1Password=admin
-MetaUrl=meta.v1/
-DataUrl=rest-1.v1/
-ConfigUrl=config.v1/
+
+##  Mandatory
+##  Boolean representing whether or not Windows Integrated Authentication is to be used as detailed above.
+##  Default setting is "false".
+WindowsIntegratedAuthentication=false
+
+##  Optional
+##  Proxy server settings if you need to authenticate to VersionOne using a proxy server.
 ProxyUrl=https://myProxyServer:3128
 ProxyUserName=user1
 ProxyPassword=pw1
+
+##  Optional
+##  These settings will typically not need to be changed and can cause problems with the API if there are invalid settings.
+MetaUrl=meta.v1/
+DataUrl=rest-1.v1/
+ConfigUrl=config.v1/
