--- a/pom.xml
+++ b/pom.xml
@@ -9,19 +9,24 @@
 
     <name>VersionOne.SDK.Java.APIClient</name>
     <url>https://github.com/versionone/VersionOne.SDK.Java.APIClient</url>
-    <description>VersionOne, Inc. Java APIClient</description>
+    <description>The VersionOne SDK.Java is a free, community-driven, open-source toolkit written in Java that accelerates software development of tools that tailor VersionOne to better fit with new practices and other tools. Unlike direct use of the REST API, the VersionOne SDK.Java provides a framework for application development on the JVM stack and tools to make development of those applications fast and easy. The framework and tools are driven from experience developing code to solve real problems.</description>
     <licenses>
         <license>
-            <name>VersionOne, Inc.</name>
+            <name>Modified BSD (3-clause)</name>
             <url>https://github.com/versionone/VersionOne.SDK.Java.APIClient/blob/master/LICENSE.md</url>
             <distribution>repo</distribution>
+            <comments>A business-friendly OSS license</comments>
         </license>
     </licenses>
     <scm>
-        <connection>scm:git@github.com:versionone/VersionOne.SDK.Java.APIClient.git</connection>
-        <developerConnection>scm:git@github.com:versionone/VersionOne.SDK.Java.APIClient.git</developerConnection>
-        <url>git@github.com:versionone/VersionOne.SDK.Java.APIClient.git</url>
+        <url>https://github.com/versionone/VersionOne.SDK.Java.APIClient</url>
+        <connection>scm:git:git@github.com:versionone/VersionOne.SDK.Java.APIClient.git</connection>
+        <developerConnection>scm:git:git@github.com:versionone/VersionOne.SDK.Java.APIClient.git</developerConnection>
     </scm>
+    <issueManagement>
+        <system>GitHub Issues</system>
+        <url>https://github.com/versionone/VersionOne.SDK.Java.APIClient/issues</url>
+    </issueManagement>
     <developers>
         <developer>
             <name>Ian Buchanan</name>
@@ -108,16 +113,19 @@
             <groupId>org.fitnesse</groupId>
             <artifactId>fitnesse</artifactId>
             <version>20111025</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jmock</groupId>
             <artifactId>jmock-junit4</artifactId>
             <version>2.6.0-RC2</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jmock</groupId>
             <artifactId>jmock-legacy</artifactId>
             <version>2.6.0-RC2</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <organization>
