refactor pom. comment out <dryRun>true</dryRun>

--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
 				<artifactId>site-maven-plugin</artifactId>
 				<configuration>
 					<message>Creating site for ${project.artifactId} ${project.version}</message>
-					<!-- <dryRun>true</dryRun> -->
+					<dryRun>true</dryRun>
 				</configuration>
 				<executions>
 					<execution>
