--- a/pom.xml
+++ b/pom.xml
@@ -47,16 +47,13 @@
 		<VERSION_NUMBER>${project.version}</VERSION_NUMBER>
     </properties>
     <distributionManagement>
-        <snapshotRepository>
-            <id>BUILDSERVER1</id>
-            <name>BUILDSERVER1-snapshots</name>
-            <url>http://buildserver1.corp.versionone.net:8081/artifactory/libs-snapshot-local</url>
-        </snapshotRepository>
-        <repository>
-            <id>BUILDSERVER1</id>
-            <name>BUILDSERVER1-releases</name>
-            <url>http://buildserver1.corp.versionone.net:8081/artifactory/libs-release-local</url>
-        </repository>
+    
+		<snapshotRepository>
+			<id>versionone</id>
+			<name>libs-snapshots-local</name>
+			<url>http://versionone.artifactoryonline.com/versionone/libs-snapshots-local</url>
+		</snapshotRepository>
+	
     </distributionManagement>
     <build>
 		<plugins>
@@ -153,7 +150,13 @@
 					</execution>
 				</executions>
 			</plugin>
+            <plugin>
+               <groupId>org.apache.maven.plugins</groupId>
+               <artifactId>maven-deploy-plugin</artifactId>
+               <version>2.7</version>
+             </plugin>
         </plugins>
+
 		<pluginManagement>
 			<plugins>
 				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
