Changed JavaDoc goal (again)

--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,7 @@
 					<execution>
 						<id>attach-javadocs</id>
 						<goals>
-							<goal>deploy</goal>
+							<goal>javadoc</goal>
 						</goals>
 					</execution>
 				</executions>
