--- a/pom.xml
+++ b/pom.xml
@@ -1,72 +1,72 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.versionone</groupId>
-    <artifactId>VersionOne.SDK.Java.APIClient</artifactId>
-    <version>13.0.1</version>
-    <packaging>jar</packaging>
+	<groupId>com.versionone</groupId>
+	<artifactId>VersionOne.SDK.Java.APIClient</artifactId>
+	<version>13.0.1</version>
+	<packaging>jar</packaging>
 
-    <name>VersionOne.SDK.Java.APIClient</name>
-    <description>A library for custom Java development against the VersionOne Development Platform's REST-based API.</description>
-    <url>https://github.com/versionone/VersionOne.SDK.Java.APIClient</url>
-    <organization>
-        <name>VersionOne, Inc.</name>
-        <url>http://www.versionone.com/</url>
-    </organization>
-    <licenses>
-        <license>
-            <name>Modified BSD (3-clause)</name>
-            <url>https://raw.github.com/versionone/VersionOne.SDK.Java.APIClient/master/LICENSE.md</url>
-            <distribution>repo</distribution>
-            <comments>A business-friendly OSS license</comments>
-        </license>
-    </licenses>
-    <issueManagement>
-        <system>GitHub Issues</system>
-        <url>https://github.com/versionone/VersionOne.SDK.Java.APIClient/issues</url>
-    </issueManagement>
-    <scm>
-        <url>https://github.com/versionone/VersionOne.SDK.Java.APIClient</url>
-        <connection>scm:git:git@github.com:versionone/VersionOne.SDK.Java.APIClient.git</connection>
-        <developerConnection>scm:git:git@github.com:versionone/VersionOne.SDK.Java.APIClient.git</developerConnection>
-    </scm>
-    <developers>
-        <developer>
-            <name>Ian Buchanan</name>
-            <email>ian.buchanan@versionone.com</email>
-        </developer>
-        <developer>
-            <name>Greg Johnson</name>
-            <email>greg.johnson@versionone.com</email>
-        </developer>
-        <developer>
-            <name>Valentin Plechuc</name>
-            <email>vplechuc@velocitypartners.net</email>
-        </developer>
-        <developer>
-            <name>Acey Bunch</name>
-            <email>acey.bunch@versionone.com</email>
-        </developer>
-    </developers>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	<name>VersionOne.SDK.Java.APIClient</name>
+	<description>A library for custom Java development against the VersionOne Development Platform's REST-based API.</description>
+	<url>https://github.com/versionone/VersionOne.SDK.Java.APIClient</url>
+	<organization>
+		<name>VersionOne, Inc.</name>
+		<url>http://www.versionone.com/</url>
+	</organization>
+	<licenses>
+		<license>
+			<name>Modified BSD (3-clause)</name>
+			<url>https://raw.github.com/versionone/VersionOne.SDK.Java.APIClient/master/LICENSE.md</url>
+			<distribution>repo</distribution>
+			<comments>A business-friendly OSS license</comments>
+		</license>
+	</licenses>
+	<issueManagement>
+		<system>GitHub Issues</system>
+		<url>https://github.com/versionone/VersionOne.SDK.Java.APIClient/issues</url>
+	</issueManagement>
+	<scm>
+		<url>https://github.com/versionone/VersionOne.SDK.Java.APIClient</url>
+		<connection>scm:git:git@github.com:versionone/VersionOne.SDK.Java.APIClient.git</connection>
+		<developerConnection>scm:git:git@github.com:versionone/VersionOne.SDK.Java.APIClient.git</developerConnection>
+	</scm>
+	<developers>
+		<developer>
+			<name>Ian Buchanan</name>
+			<email>ian.buchanan@versionone.com</email>
+		</developer>
+		<developer>
+			<name>Greg Johnson</name>
+			<email>greg.johnson@versionone.com</email>
+		</developer>
+		<developer>
+			<name>Valentin Plechuc</name>
+			<email>vplechuc@velocitypartners.net</email>
+		</developer>
+		<developer>
+			<name>Acey Bunch</name>
+			<email>acey.bunch@versionone.com</email>
+		</developer>
+	</developers>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<github.global.server>github</github.global.server>
 		<VERSION_NUMBER>${project.version}</VERSION_NUMBER>
-    </properties>
-    <distributionManagement>
-        <snapshotRepository>
-            <id>BUILDSERVER1</id>
-            <name>BUILDSERVER1-snapshots</name>
-            <url>http://buildserver1.corp.versionone.net:8081/artifactory/libs-snapshot-local</url>
-        </snapshotRepository>
-        <repository>
-            <id>BUILDSERVER1</id>
-            <name>BUILDSERVER1-releases</name>
-            <url>http://buildserver1.corp.versionone.net:8081/artifactory/libs-release-local</url>
-        </repository>
-    </distributionManagement>
-    <build>
+	</properties>
+	<distributionManagement>
+		<snapshotRepository>
+			<id>BUILDSERVER1</id>
+			<name>BUILDSERVER1-snapshots</name>
+			<url>http://buildserver1.corp.versionone.net:8081/artifactory/libs-snapshot-local</url>
+		</snapshotRepository>
+		<repository>
+			<id>BUILDSERVER1</id>
+			<name>BUILDSERVER1-releases</name>
+			<url>http://buildserver1.corp.versionone.net:8081/artifactory/libs-release-local</url>
+		</repository>
+	</distributionManagement>
+	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -79,17 +79,17 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>        
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <skipTests>false</skipTests>
-                    <includes>
-                        <include>**/*Test*.java</include>
-                    </includes>
-                </configuration>
-            </plugin>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<skipTests>false</skipTests>
+					<includes>
+						<include>**/*Test*.java</include>
+					</includes>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
@@ -99,6 +99,13 @@
 						<format>xml</format>
 					</formats>
 				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>test</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -123,7 +130,7 @@
 					</dependency>
 				</dependencies>
 			</plugin>
-			
+
 			<plugin>
 				<groupId>com.github.github</groupId>
 				<artifactId>site-maven-plugin</artifactId>
@@ -141,7 +148,7 @@
 					</execution>
 				</executions>
 			</plugin>
-			
+
 			<!-- Write out maven properties so they can be used by Jenkins -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
@@ -160,11 +167,12 @@
 					</execution>
 				</executions>
 			</plugin>
-        </plugins>
-        
+		</plugins>
+
 		<pluginManagement>
 			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
 					<artifactId>lifecycle-mapping</artifactId>
@@ -199,9 +207,9 @@
 				</plugin>
 			</plugins>
 		</pluginManagement>
-    </build>
-    <reporting>
-        <plugins>
+	</build>
+	<reporting>
+		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-plugin-plugin</artifactId>
@@ -210,62 +218,48 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
 			</plugin>
-			<!--
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <configuration>
-                    <check></check>
-                    <instrumentation>
-                        <includes>
-                            <include>**/*Test*.class</include>
-                        </includes>
-                    </instrumentation>
-                    <formats>
-                        <format>html</format>
-                        <format>xml</format>
-                    </formats>
-                </configuration>
-            </plugin>
-            -->
-        </plugins>
-    </reporting>
-    <repositories>
-        <repository>
-            <id>java.net-Public</id>
-            <name>Maven Java Net Snapshots and Releases</name>
-            <url>https://maven.java.net/content/groups/public/</url>
-        </repository>
-        <repository>
-            <id>repository.jboss.org-public</id>
-            <name>JBoss.org Maven repository</name>
-            <url>https://repository.jboss.org/nexus/content/groups/public</url>
-        </repository>
-    </repositories>
-    <dependencies>
-        <dependency>
-            <groupId>org.fitnesse</groupId>
-            <artifactId>fitnesse</artifactId>
-            <version>20111025</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jmock</groupId>
-            <artifactId>jmock-junit4</artifactId>
-            <version>2.6.0-RC2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jmock</groupId>
-            <artifactId>jmock-legacy</artifactId>
-            <version>2.6.0-RC2</version>
-            <scope>test</scope>
-        </dependency>
+			<!-- <plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>cobertura-maven-plugin</artifactId> 
+				<configuration> <check></check> <instrumentation> <includes> <include>**/*Test*.class</include> 
+				</includes> </instrumentation> <formats> <format>html</format> <format>xml</format> 
+				</formats> </configuration> </plugin> -->
+		</plugins>
+	</reporting>
+	<repositories>
+		<repository>
+			<id>java.net-Public</id>
+			<name>Maven Java Net Snapshots and Releases</name>
+			<url>https://maven.java.net/content/groups/public/</url>
+		</repository>
+		<repository>
+			<id>repository.jboss.org-public</id>
+			<name>JBoss.org Maven repository</name>
+			<url>https://repository.jboss.org/nexus/content/groups/public</url>
+		</repository>
+	</repositories>
+	<dependencies>
+		<dependency>
+			<groupId>org.fitnesse</groupId>
+			<artifactId>fitnesse</artifactId>
+			<version>20111025</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jmock</groupId>
+			<artifactId>jmock-junit4</artifactId>
+			<version>2.6.0-RC2</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.jmock</groupId>
+			<artifactId>jmock-legacy</artifactId>
+			<version>2.6.0-RC2</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
-    </dependencies>
+	</dependencies>
 </project>
