--- a/pom.xml
+++ b/pom.xml
@@ -102,8 +102,9 @@
 				<executions>
 					<execution>
 						<goals>
-							<goal>test</goal>
+							<goal>cobertura:report</goal>
 						</goals>
+						<phase>test</phase>
 					</execution>
 				</executions>
 			</plugin>
