refactor pom to upload artifact to Artifactory

--- a/pom.xml
+++ b/pom.xml
@@ -54,17 +54,13 @@
 		<github.global.server>github</github.global.server>
 		<VERSION_NUMBER>${project.version}</VERSION_NUMBER>
 	</properties>
-	<!-- <distributionManagement> <snapshotRepository> <id>BUILDSERVER1</id> 
-		<name>BUILDSERVER1-snapshots</name> <url>http://buildserver1.corp.versionone.net:8081/artifactory/libs-snapshot-local</url> 
-		</snapshotRepository> <repository> <id>BUILDSERVER1</id> <name>BUILDSERVER1-releases</name> 
-		<url>http://buildserver1.corp.versionone.net:8081/artifactory/libs-release-local</url> 
-		</repository> </distributionManagement> -->
+
 	<distributionManagement>
-		<snapshotRepository>
+		<repository>
 			<id>versionone</id>
-			<name>libs-snapshots-local</name>
-			<url>http://versionone.artifactoryonline.com/versionone/libs-snapshots-local</url>
-		</snapshotRepository>
+			<name>versionone-releases</name>
+			<url>http://versionone.artifactoryonline.com/versionone/libs-releases-local</url>
+		</repository>
 	</distributionManagement>
 
 	<build>
@@ -253,28 +249,7 @@
 				</formats> </configuration> </plugin> -->
 		</plugins>
 	</reporting>
-	<repositories>
 
-		<repository>
-			<id>java.net-Public</id>
-			<name>Maven Java Net Snapshots and Releases</name>
-			<url>https://maven.java.net/content/groups/public/</url>
-		</repository>
-
-		<repository>
-			<id>repository.jboss.org-public</id>
-			<name>JBoss.org Maven repository</name>
-			<url>https://repository.jboss.org/nexus/content/groups/public</url>
-		</repository>
-
-		<repository>
-			<snapshots />
-			<id>versionone</id>
-			<name>clarity-libs-private</name>
-			<url>http://versionone.artifactoryonline.com/versionone/simple/clarity-libs-private</url>
-		</repository>
-
-	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>org.fitnesse</groupId>
