Adding MANIFEST definition and dependecy to read  MANIFEST info

--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,22 @@
 
 	<build>
 		<plugins>
+			<!-- Write manifest properties -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.1</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+						</manifest>
+						<manifestEntries>
+							<VERSION_NUMBER>${project.artifactId} ${project.version}</VERSION_NUMBER>
+						</manifestEntries>
+					</archive>
+				</configuration>
+			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
@@ -256,6 +272,12 @@
 	</reporting>
 
 	<dependencies>
+	<!-- Allows to read Manifest Information -->
+		<dependency>
+			<groupId>com.jcabi</groupId>
+			<artifactId>jcabi-manifests</artifactId>
+			<version>1.1</version>
+		</dependency>
 		<dependency>
 			<groupId>org.fitnesse</groupId>
 			<artifactId>fitnesse</artifactId>
