--- a/src/main/resources/com/versionone/apiclient/APIConfiguration.properties
+++ b/src/main/resources/com/versionone/apiclient/APIConfiguration.properties
@@ -6,7 +6,7 @@ V1Url=https://www14.v1host.com/v1sdktesting/
 ##  Optional (depending on use case)
 ##  If you're using VersionOne authentication, enter the V1 user information here.
 ##  If you want to authenticate to VersionOne impersonating the user running your program, leave these fields blank.
-V1UserName=admin
+V1Username=admin
 V1Password=admin
 
 ##  Optional
