Changed test url

--- a/src/main/resources/com/versionone/apiclient/APIConfiguration.properties
+++ b/src/main/resources/com/versionone/apiclient/APIConfiguration.properties
@@ -1,7 +1,7 @@
 
 ##  Mandatory
 ##  The url of your VersionOne instance.
-V1Url=https://www14.v1host.com/v1sdktesting/
+V1Url=http://localhost/versionone/
 
 ##  Optional (depending on use case)
 ##  If you're using VersionOne authentication, enter the V1 user information here.
