Change javadocs to "package" phase

--- a/pom.xml
+++ b/pom.xml
@@ -142,7 +142,7 @@
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
-						<phase>clean</phase>
+						<phase>package</phase>
 						<goals>
 							<goal>jar</goal>
 						</goals>
