--- a/pom.xml
+++ b/pom.xml
@@ -157,7 +157,7 @@
 				<executions>
 					<execution>
 						<id>attach-sources</id>
-						<phase>clean</phase>
+						<phase>package</phase>
 						<goals>
 							<goal>jar</goal>
 						</goals>
