--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.versionone</groupId>
 	<artifactId>VersionOne.SDK.Java.APIClient</artifactId>
-	<version>13.0.2-SNAPSHOT</version>
+	<version>13.0.2</version>
 	<packaging>jar</packaging>
 
 	<name>VersionOne.SDK.Java.APIClient</name>
@@ -55,6 +55,7 @@
 		<VERSION_NUMBER>${project.version}</VERSION_NUMBER>
 	</properties>
 
+<!--
 	<distributionManagement>
 		<repository>
 			<id>versionone</id>
@@ -67,6 +68,7 @@
 			<url>http://versionone.artifactoryonline.com/versionone/libs-snapshots-local</url>
 		</snapshotRepository>
 	</distributionManagement>
+-->
 
 	<build>
 		<plugins>
@@ -113,7 +115,7 @@
 				<executions>
 					<execution>
 						<id>make-assembly</id>
-						<phase>deploy</phase>
+						<phase>package</phase>
 						<goals>
 							<goal>single</goal>
 						</goals>
@@ -129,11 +131,15 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+			
+			<!-- 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-deploy-plugin</artifactId>
 				<version>2.7</version>
 			</plugin>
+			-->
+			
 			<!-- Add javadoc jar -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -149,6 +155,7 @@
 					</execution>
 				</executions>
 			</plugin>
+			
 			<!-- Add sources jar -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -177,6 +184,7 @@
 					</includes>
 				</configuration>
 			</plugin>
+			
 			<!-- integration test suite -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -192,6 +200,8 @@
 					</execution>
 				</executions>
 			</plugin>
+			
+			<!-- Cobertura test coverage -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
@@ -202,9 +212,10 @@
 					</formats>
 					<check/>
 				</configuration>
-				<!-- <executions> <execution> <goals> <goal>cobertura</goal> </goals> 
-					<phase>test</phase> </execution> </executions> -->
 			</plugin>
+
+			<!-- Documentation site builder plugin -->
+			<!-- 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
@@ -217,6 +228,7 @@
 					</dependency>
 				</dependencies>
 			</plugin>
+			-->
 
 			<plugin>
 				<groupId>com.github.github</groupId>
