--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,7 @@
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
-					<finalName>${project.artifactId}-${project.version}</finalName>
+					<finalName>VersionOne.JavaSDK-${project.version}</finalName>
 					<descriptors>
 						<descriptor>${basedir}/assembly.xml</descriptor>
 					</descriptors>
