--- a/pom.xml
+++ b/pom.xml
@@ -430,7 +430,11 @@
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
-
+		<dependency>
+			<groupId>commons-validator</groupId>
+			<artifactId>commons-validator</artifactId>
+			<version>1.4.1</version>
+		</dependency>
 	</dependencies>
 
 	<distributionManagement>
