--- a/pom.xml
+++ b/pom.xml
@@ -426,6 +426,11 @@
     		<version>4.4</version>
 		</dependency>
 		<dependency>
+    		<groupId>org.apache.httpcomponents</groupId>
+    		<artifactId>httpclient-win</artifactId>
+    		<version>4.4</version>
+		</dependency>
+		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
