--- a/pom.xml
+++ b/pom.xml
@@ -289,6 +289,7 @@
 					</execution>
 				</executions>
 			</plugin>
+			
 			<!--GPG plug in for maven-->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -378,13 +379,6 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.fitnesse</groupId>
-			<artifactId>fitnesse</artifactId>
-			<version>20111025</version>
-			<scope>test</scope>
-		</dependency>
-<!-- 		added testing dependecy -->
-		<dependency>
 			<groupId>org.jmock</groupId>
 			<artifactId>jmock-junit4</artifactId>
 			<version>2.6.0-RC2</version>
@@ -414,7 +408,6 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
-<!-- ################################### -->
 		<dependency>
 			<groupId>org.apache.maven.plugins</groupId>
 			<artifactId>maven-gpg-plugin</artifactId>
@@ -445,7 +438,11 @@
 			<artifactId>commons-validator</artifactId>
 			<version>1.4.1</version>
 		</dependency>
-	
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>2.4</version>
+		</dependency>
 	</dependencies>
 
 	<distributionManagement>
@@ -460,7 +457,5 @@
 			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
 		</repository>
 	</distributionManagement>
-
-
 
 </project>
