Fixed query.v1 integration tests

--- a/pom.xml
+++ b/pom.xml
@@ -125,7 +125,7 @@
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
-						<phase>package</phase>
+						<phase>deploy</phase>
 						<goals>
 							<goal>jar</goal>
 						</goals>
