--- a/EnvFile.properties
+++ b/EnvFile.properties
@@ -1,8 +1,4 @@
-#V1_INSTANCE_URL=http://localhost/VersionOne
-#V1_USERNAME=admin
-#V1_PASSWORD=admin
-#V1_ACCESS_TOKEN=1.3R5gpztiLZynxKfzPUgVUH6DCvU=
-V1_TEST_INSTANCE=http://builds.versionone.net/15.2.0.7263
+V1_INSTANCE_URL=http://localhost/VersionOne
 V1_USERNAME=admin
 V1_PASSWORD=admin
-V1_ACCESS_TOKEN=1.Oy78vLZnMHCM1q6jbJdKyEiwgyQ=
+V1_ACCESS_TOKEN=1.3R5gpztiLZynxKfzPUgVUH6DCvU=
