--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,6 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
-			
 			<!-- Add javadoc jar -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -149,6 +148,29 @@
 					</execution>
 				</executions>
 			</plugin>
+			<!-- adding dependencies -->
+			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.8</version>
+                <executions>
+                    <execution>
+                        <id>copy-dependencies</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>dependencies</outputDirectory>
+                            <includeScope>runtime</includeScope>
+                            <overWriteReleases>false</overWriteReleases>
+                            <overWriteSnapshots>false</overWriteSnapshots>
+                            <overWriteIfNewer>true</overWriteIfNewer>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+			
 
 			<!-- Unit test suite -->
 			<plugin>
