--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.versionone</groupId>
 	<artifactId>VersionOne.SDK.Java.APIClient</artifactId>
-	<version>15.0.0</version>
+	<version>15.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>VersionOne.SDK.Java.APIClient</name>
@@ -90,6 +90,20 @@
 					</archive>
 				</configuration>
 			</plugin>
+			<!-- generate javadoc -->
+			<plugin>
+			    <artifactId>maven-javadoc-plugin</artifactId>
+			    <executions>
+			      <execution>
+			        <id>javadoc</id>
+			        <phase>package</phase>
+			        <goals>
+			          <goal>javadoc</goal>
+			        </goals>
+			      </execution>
+			    </executions>
+			</plugin>
+			<!-- create zip file using assembly.xml -->			
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<configuration>
@@ -108,7 +122,6 @@
 					</execution>
 				</executions>
 			</plugin>
-
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
