--- a/pom.xml
+++ b/pom.xml
@@ -90,7 +90,7 @@
 					</archive>
 				</configuration>
 			</plugin>
-			<!-- generate javadoc -->
+			<!-- generate javadoc 
 			<plugin>
 			    <artifactId>maven-javadoc-plugin</artifactId>
 			    <executions>
@@ -103,6 +103,7 @@
 			      </execution>
 			    </executions>
 			</plugin>
+			-->
 			<!-- create zip file using assembly.xml -->			
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
