adding OAuth endpoints functionality

--- a/src/main/resources/com/versionone/apiclient/APIConfiguration.properties
+++ b/src/main/resources/com/versionone/apiclient/APIConfiguration.properties
@@ -1,14 +1,14 @@
 
 ##  Mandatory
 ##  The url of your VersionOne instance.
-V1Url=http://localhost/versionone/
+V1Url=http://localhost/VersionOne/
 
 ##  Optional (depending on use case)
 ##  If you're using VersionOne authentication, enter the V1 user information here.
 ##  If you want to authenticate to VersionOne impersonating the user running your program, leave these fields blank.
 V1Username=admin
 V1Password=admin
-V1AccessToken=test
+V1AccessToken=1.yL3CcovObgbQnmMKP8PKTt3fo7A=
 
 ##  Optional
 ##  Proxy server settings if you need to authenticate to VersionOne using a proxy server.
