adding compiler pplug in to use 1.8 jvm to support lambdas

--- a/pom.xml
+++ b/pom.xml
@@ -277,7 +277,16 @@
 					<autoReleaseAfterClose>false</autoReleaseAfterClose>
 				</configuration>
 			</plugin>
-
+			<!-- adding compiletion option  -->
+		    <plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-compiler-plugin</artifactId>
+		        <version>3.6.0</version>
+		        <configuration>
+		            <source>1.8</source>
+		            <target>1.8</target>
+		        </configuration>
+		    </plugin>
 		</plugins>
 	</build>
 	
